# Corewar

./: CMakeLists.txt
corewar-championship/: ._asm  ._champs  ._corewar  1.txt  text.txt
corewar-championship/champs/: ._bee_gees.s  ._bigzork.s  ._fluttershy.s  ._helltrain.s  ._turtle.s  ._zork.s  test.cor  test.s
test_map/: add.cor  add.s  aff.cor  aff.s  and.cor  and.s  fork.cor  fork.s  ld.cor  ld.s  ldi.cor  ldi.s  lfork.cor  lfork.s  live.cor  live.s  lld.cor  lld.s  lldi.cor  lldi.s  or.cor  or.s  st.cor  st.s  sti.cor  sti.s  sub.cor  sub.s  xor.cor  xor.s  zjmp.cor  zjmp.s
virtual_mashin/: Makefile  a.out  check_cycle_to_die.c  check_live.c  controller.c  corevar  corewar  error_manager.c  free_memory.c  main.c  model.c  ncurses.c  run_process.c  start_process.c  text.txt  use.c  visualise.c  vm.h
virtual_mashin/libft/: ._ft_strstr.c  Makefile  author  ft_alldown.c  ft_allup.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  (+26 more)
virtual_mashin/operations/: add.c  aff.c  and.c  ft_fork.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
